--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@babel/runtime": "^7.9.6",
     "classnames": "^2.2.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "formik": "^2.1.5",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -32,6 +34,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "reset-css": "^5.0.1"
   },
